Schools data bug party: on Schools landing page - fix table rows which were staggered
- prevent table row misalignment by overriding border-collapse on school tables
- add `.app-table--no-collapse` modifier to override `border-collapse: collapse`

--- a/app/assets/stylesheets/publish/components/_table.scss
+++ b/app/assets/stylesheets/publish/components/_table.scss
@@ -6,6 +6,10 @@
   }
 }
 
+.app-table--no-collapse {
+  border-collapse: separate;
+}
+
 .app-table--courses {
   &__course-name {
     width: 33%;
